--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,8 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
+            "browsers": "ChromeHeadless",
+            "watch": false,
             "main": "src/test.ts",
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
