--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@ngrx/effects": "^20.1.0",
+    "@ngrx/store": "^20.1.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
@@ -53,6 +55,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
+    "jasmine-marbles": "^0.9.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
